  - Speed-up group milestones show page
  - Log LDAP lookup errors and don't swallow unrelated exceptions. !6103 (Markus Koller)
  - Add more tests for calendar contribution (ClemMakesApps)
  - Avoid database queries on Banzai::ReferenceParser::BaseParser for nodes without references
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Only update issuable labels if they have been changed
  - Revoke button in Applications Settings underlines on hover.
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Add organization field to user profile
  - Optimize GitHub importing for speed and memory

v 8.12.2 (unreleased)
  - Added University content to doc/university
  - Fix Import/Export not recognising correctly the imported services.
  - Fix snippets pagination
  - Fix List-Unsubscribe header in emails
  - Fix IssuesController#show degradation including project on loaded notes
  - Fix an issue with the "Commits" section of the cycle analytics summary. !6513
  - Fix errors importing project feature and milestone models using GitLab project import
  - Make JWT messages Docker-compatible

v 8.12.1
  - Fix a memory leak in HTML::Pipeline::SanitizationFilter::WHITELIST
  - Fix issue with search filter labels not displaying
  - Fix bug where 'Search results' repeated many times when a search in the emoji search form is cleared (Xavier Bick) (@zeiv)

v 8.12.0
  - Update the rouge gem to 2.0.6, which adds highlighting support for JSX, Prometheus, and others. !6251
  - Only check :can_resolve permission if the note is resolvable
  - Bump fog-aws to v0.11.0 to support ap-south-1 region
  - Add ability to fork to a specific namespace using API. (ritave)
  - Allow to set request_access_enabled for groups and projects
  - Cleanup misalignments in Issue list view !6206
  - Only create a protected branch upon a push to a new branch if a rule for that branch doesn't exist
  - Prune events older than 12 months. (ritave)