@@ -7,6 +7,7 @@ v 8.13.0 (unreleased)
   - Add more tests for calendar contribution (ClemMakesApps)
   - Avoid database queries on Banzai::ReferenceParser::BaseParser for nodes without references
   - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
+  - Flush event caches without updating the database
   - Only update issuable labels if they have been changed
   - Revoke button in Applications Settings underlines on hover.
   - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
